--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,14 @@ h2 {
     text-align: center;
 }
 
+.echo-description {
+    color: #718096;
+    font-size: 0.9rem;
+    text-align: center;
+    margin-bottom: 20px;
+    font-style: italic;
+}
+
 /* Section Containers */
 .section-container {
     background: rgba(255, 255, 255, 0.95);
